--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
         <title>Document</title>
 </head>
 <body>
+        <div class="container">
+                <div class="display">This is an image of a game screen, 
+                                        or a video player</div>
+                <div class="controls">This holds buttons that either play the game 
+                                        or control playback</div>
+        </div>
+        <!-- In the above, "display" is a child of "container"
+        and a sibling of "controls". I can think of this like a family tree, 
+        and as I move down, subsequesnt children spread out. -->
 
-
-        <script src="finalproject.js"></script>
+        <script src="DOMpractice.js"></script>
 
 
 
