--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         and a sibling of "controls". I can think of this like a family tree, 
         and as I move down, subsequesnt children spread out. -->
 
+        <button class="btn">Click Me</button>
+
         <script src="DOMpractice.js"></script>
 
 </body>
