--- a/index.html
+++ b/index.html
@@ -16,7 +16,24 @@
         and a sibling of "controls". I can think of this like a family tree, 
         and as I move down, subsequesnt children spread out. -->
 
-        <button class="btn">Click Me</button>
+        <div class = "container2">
+                <button class="btn">Click Me</button>
+                <button class="one">Click Me</button>
+                <button class="two">Click Me</button>
+                <button class="three">Click Me</button>
+        </div>
+        <!-- Event Bubbling:    If I click the button 2, the button element gets the
+                signal, and then it "bubbles up" to the div,
+                then to the body, then to the html, then to the Document itself. 
+                Modern browsers also bubble to a "window" object
+                
+                Event Capturing goes backwards: Window -> document -> 
+                html -> body -> div -> button
+        
+                what happens when someone performs an event is:
+                event capture happens, then the event at the element it was applied to,
+                then it bubbles back up.  -->
+
 
         <script src="DOMpractice.js"></script>
 
