--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8:>
         <meta name="viewport" content = "width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <link Irel="stylesheet" href="styles.css">
 </head>
 <body>
         <div class="container">
@@ -33,6 +34,9 @@
                 what happens when someone performs an event is:
                 event capture happens, then the event at the element it was applied to,
                 then it bubbles back up.  -->
+
+                <div class="track"></div>
+                <p class="log"></p>
 
 
         <script src="DOMpractice.js"></script>
