--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 
                 <div class="track"></div>
                 <p class="log"></p>
-
+        <ul id='menu'>
+                
+        </ul>
 
         <script src="DOMpractice.js"></script>
 
