--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple DOM example</title>
   </head>
+    <style>
+    .hightlight {
+       color: white;
+       background-color: black;
+        padding: 10px;
+        width: 250px;
+       text-align: center;
+      }
+    </style>
   <script></script>
   <body>
       <section>
@@ -17,6 +26,12 @@
         <p>
             Here we will add a link to the 
             <a href="https://www.mozilla.org/">Mozilla homepage</a>
+        </p>
+
+        <p
+          style="color: white; background-color: black; 
+          padding: 10px; width: 250px; text-align:center;"">
+          We hope you enjoyed the ride.
         </p>
       </section>
   </body>
